...
                .font(.caption)
                .foregroundColor(Color.theme.secondaryText)
                .frame(minWidth: 30)
            CoinImageView(coin: coin, networkManager: networkManager)
                .frame(width: 30, height: 30)
            Text(coin.symbol.uppercased())
                .accessibility(identifier: "CoinSymbolText")
                .font(.headline)
                .padding(.leading, 6)
                .foregroundColor(Color.theme.accent)
        }
    }
    
...
